--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,9 +32,9 @@
             android:theme="@style/Theme.ToastMaster.NoActionBar">
         </activity>
         <activity
-            android:name=".ui.record.RecordActivity"
+            android:name=".ui.report.ReportActivity"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
+            android:theme="@style/Theme.ToastMaster.NoActionBar"
             >
         </activity>
         <activity
