--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
         </activity>
 
         <activity
+            android:name=".ui.timer.TimerRunActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ToastMaster.NoActionBar">
+        </activity>
+        <activity
             android:name=".ui.timer.TimerActivity"
             android:exported="false"
             android:theme="@style/Theme.ToastMaster.NoActionBar">
